afer creativepro website modifications + missing files???

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 /nbproject/private/
+/components/com_k2/templates/counterplan_graphic_title/css/timelinemask-primopiano-simple.fw.png
+/components/com_k2/templates/counterplan_graphic_title/css/timelinemask-primopiano-simple2.fw.png
+/components/com_k2/templates/counterplan_graphic_title/css/timelinemask-primopiano3.png
+/components/com_k2/templates/counterplan_graphic_title/css/timelinemask-primopiano-simple4.png
+/components/com_k2/templates/counterplan_graphic_title/css/timelinemask-primopiano-simple2.png
+/components/com_k2/templates/counterplan_graphic_title/css/timelinemask-primopiano3.fw.png
+/components/com_k2/templates/counterplan_graphic_title/css/timelinemask-primopiano-simple3.png
+/components/com_k2/templates/counterplan_graphic_title/css/timelinemask-primopiano-simple3.fw.png
